--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2017-07-19
+% \update      2017-08-02
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -1130,7 +1130,7 @@
    reminder that moving these events can really screw up the notes, for example
    by moving Note Off to before the Note On event.
    
-\paragraph{Editing Other Events}
+\paragraph{Event and Data Panels / Editing Other Events}
 \label{paragraph:seq64_pattern_editor_other_events}
 
 %  Left-click or right-click on events in the event strip (directly under
