--- a/tex/seq64_rc_file.tex
+++ b/tex/seq64_rc_file.tex
@@ -898,7 +898,7 @@
       236 39 65379  # group on, off, learn: igrave apostrophe Insert
       # replace, queue, snapshot_1, snapshot 2, keep queue:
       65507 65508 65513 65514 92  # Control_L Control_R Alt_L Alt_R backslash
-      1             # show_ui_sequence_key (1=true/0=false)
+      1             # show_ui_sequence_key and pattern measures (1=true/0=false)
       32            # space start sequencer
       65307         # Escape stop sequencer
       0 #  show sequence numbers (1 = true / 0 = false);  ignored in legacy mode
