Catching up with new temp settings.

--- a/tex/seq64_kudos.tex
+++ b/tex/seq64_kudos.tex
@@ -56,6 +56,8 @@
          
    \end{itemize}
 
+   ... and there are more to add to this list....
+
    There are a number of authors of \textsl{Seq24}.
    ideas from other \textsl{Seq24} fans),
    and some deep history,
