--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -502,6 +502,13 @@
          \index{pattern!name}
          This line contains the name or title of the pattern, to help
          reference it when juggling a number of patters.
+      \item \textbf{Pattern Length}.
+         \index{pattern!length}
+         \textbf{New:}
+         If the option to show pattern hot-key is enabled, the length of the
+         pattern, in measures, is shown in the upper right corner of the
+         pattern slot.  This feature is useful when recording tempo events that
+         will increase the length of the tempo track.
       \item \textbf{Contents}.
          \index{pattern!contents}
          The contents of the pattern provide a fairly detailed and
@@ -510,7 +517,6 @@
          tracks the position of the playback of the pattern or loop; it
          returns to the beginning of the box every time that pattern starts
          over again.
-         \textbf{New:}
          \index{new!empty pattern}
          With \textsl{Sequencer64}, an imported empty pattern will no longer
          needlessly scroll.
@@ -902,7 +908,8 @@
 
    The handling of \texttt{Alt} is often taken over by the window
    manager, so there could be a need to change these items to some other
-   keys.  For example, we have Fluxbox set up so that the \texttt{Alt} keys can
+   keys.  For example, we have the Fluxbox window manager
+   set up so that the \texttt{Alt} keys can
    be used for moving or resizing a window.
 
 %  \index{keys!left ctrl alt}
@@ -1118,6 +1125,9 @@
    \caption{Patterns Panel, Bottom Panel Items}
    \label{fig:pattern_window_bottom_panel_items}
 \end{figure}
+
+   This figure is way out of date, and does not show the new items, marked as
+   "(new)", in the list below.
 
    \begin{enumber}
       \item \textbf{Stop}
