--- a/tex/seq64_song_editor.tex
+++ b/tex/seq64_song_editor.tex
@@ -162,11 +162,11 @@
    in the Song Editor.  One can change the start position only when the
    performance is not playing.
    \index{keys!space (play)}
-   The keystroke for starting playback is the \texttt{Space} character.
+   The default keystroke for starting playback is the \texttt{Space} character.
    \index{keys!esc (stop)}
-   The keystroke for stopping playback is the \texttt{Escape} character.
+   The default keystroke for stopping playback is the \texttt{Escape} character.
    \index{keys!period (pause)}
-   The keystroke for pausing playback is the \texttt{Period} character,
+   The default keystroke for pausing playback is the \texttt{Period} character,
    which currently works only in ALSA mode.
 
    \itempar{Play Loop}{song editor!play loop}
